--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ h2 {
     width: 100%;
   }
   .footer {
-    visibility: hidden;
+    display: none;
   }
   .mobile-links {
     visibility: inherit;
@@ -88,7 +88,7 @@ h2 {
     width: 100%;
   }
   .footer {
-    visibility: hidden;
+    display: none;
   }
   .mobile-links {
     visibility: inherit;
