--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 }
 
 body {
-  font-family: neue-haas-grotesk;
+  font-family: neue-haas-grotesk, helvetica, sans-serif;
   background-color: #f1f1f1;
   color:#000;
 
