--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
 body {
   font-family: neue-haas-grotesk, sans-serif;
-  background-color: #f1f1f1;
+  background-color: #fff;
   color:#000;
 
   font-weight: 550;
@@ -86,21 +86,27 @@ a:hover{
   width: 80vw;
 }
 
+.image-container {
+  min-height: 100%;
+
+}
+
 /*.video {
   position: relative;
   padding: 56.25%;
   height: 0;
 }*/
 
-.desktop-video {
+/*.desktop-video {
   position: absolute;
   top: 0;
   width: 100%;
   height: 100%;
-}
+}*/
 
 .slick-container {
   position: relative;
+  background-color: #000;
 }
 
 .paginator {
@@ -274,7 +280,7 @@ a:hover{
   }
 
   .roles {
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
   }
 
   .text {
