--- a/style.css
+++ b/style.css
@@ -93,13 +93,14 @@ a:hover{
 .slick-container {
   position: relative;
   /*background-color: #000;*/
+  width: 80vw;
 }
 
 .paginator {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 99999;
+  z-index: 9999;
 }
 
 .paginator-left {
@@ -144,6 +145,8 @@ a:hover{
   text-indent: 20px;
 }
 
+
+
 .break {
   display: inline-block;
   padding-bottom: 1rem;
@@ -182,6 +185,8 @@ a:hover{
 #year-mobile {
   display: none;
 }
+
+
 
 @media (max-width: 1200px) {
   .wrapper {
@@ -251,6 +256,10 @@ a:hover{
 }
 
 @media (max-width: 736px) {
+
+  .slick-container {
+    width: 100vw;
+  }
 
   .paginator {
     display: none;
