--- a/style.css
+++ b/style.css
@@ -32,6 +32,18 @@ body {
   line-height: 130%;
   }
 
+  h1 {
+    font-weight: 550;
+  }
+
+  h2 {
+    font-weight: 550;
+  }
+
+  h3 {
+    font-weight: 550;
+  }
+
 a {
   color: #1a1a1a;
   text-decoration: underline;
